# NUCLEO-F103RB

./: CMakeLists.txt  STM32Toolchain.cmake
Application/Exercise_4_1/: CMakeLists.txt
Application/Exercise_4_3/: CMakeLists.txt
Application/Exercise_5_3/: CMakeLists.txt
Application/Exercise_5_3/include/: USART.h
Application/Exercise_5_3/src/: USART.cpp  main.cpp
Libraries/CMSIS/Device/ST/STM32F10x/src/: system_stm32f1xx.c
src/: main.cpp
src/Exercise_4_1/: main.cpp
src/Exercise_4_3/: main.cpp
